# queuevm

./: .gitignore  CMakeLists.txt  README.md  README.org  queue.h  qvm.c
lib/: CMakeLists.txt
lib/queue/: CMakeLists.txt
lib/queue/src/queue/: queue.c  queue.h
lib/qvm/: CMakeLists.txt
lib/qvm/src/qvm/: qvm.c  qvm.h
lib/qvm/src/qvm_exec/: qvm_exec.c  qvm_exec.h
src/: CMakeLists.txt  quasm.c  qvm.c  qvmi.c  unquasm.c
test/: countdown.quasm  err.quasm  label_ahead.quasm  test1.quasm  testeq.quasm  testregister.quasm  testskip.quasm  testtypes.quasm
